--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -3,11 +3,13 @@ on: [push]
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    # Runs tests in parallel with matrix strategy
+    # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
+    # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
+    # Also see warning here https://github.com/cypress-io/github-action#parallel
     strategy:
-      fail-fast: false
+      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
-        containers: [1,2]
+        containers: [1] # Uses 1 parallel instance (adjust if needed)
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -18,13 +20,18 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run Cypress tests
+        # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v6
         with:
-          # Remove the start and wait-on if not needed
+          # Records to Cypress Cloud
+          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
           record: true
-          parallel: true
+          parallel: false # Runs test in parallel using settings above
           publish-summary: true
           component: false
         env:
+          # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
+          # in GitHub repo → Settings → Secrets → Actions
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
