--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.9.0",
+    "cypress-real-events": "^1.12.0",
     "neat-csv": "^5.2.0"
   },
   "dependencies": {
