working for the CSV read file

--- a/cypress/fixtures/csv_parserAkashApproch.json
+++ b/cypress/fixtures/csv_parserAkashApproch.json
@@ -1,193 +1,29 @@
 [
   [
     "Employment intermediary name (Must be between 1 and 120 characters.)",
-    "SP_AGENCY_DIRECT",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
+    "Ajay Indirect Agency test"
   ],
   [
     "Employment intermediary address line 1 (Must be between 1 and 35 characters.)",
-    "925 Heffernan Center",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
+    "Address Line 1"
   ],
   [
     "Employment intermediary address line 2 (Must be between 1 and 35 characters.)",
-    "Suite 35",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
+    "Line 2"
   ],
   [
     "Employment intermediary address line 3 (Optional, between 1 and 35 characters.)",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
     ""
   ],
   [
     "Employment intermediary address line 4 (Optional, between 1 and 35 characters.)",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
     ""
   ],
   [
     "Employment intermediary postcode (Must be between 1 and 10 characters.)",
-    "LS6",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
+    "600072"
   ],
-  [
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    "",
-    ""
-  ],
+  [],
   [
     "Worker forename (Must be between 1 and 35 characters.)",
     "Worker middle name (Optional, between 1 and 35 characters.)",
@@ -216,57 +52,138 @@
     "Companies House registration number of party paid by intermediary for worker's services (There must be an entry if 'Worker engagement details where intermediary didn't operate PAYE' is 'D'. Must be 2 letters and 6 numbers, or between 6 and 8 numbers.)"
   ],
   [
-    "SP_LTD",
+    "Ajay umb",
     "",
-    "_DIRECT",
-    "30/01/2023",
-    "F",
-    "TQ394242N",
-    "1 Thierer Crossing",
-    "Suite 41",
-    "",
-    "",
-    "SN1",
+    "Incont",
+    "2022-02-21",
     "F",
     "",
-    "01/03/2024",
-    "29/04/2024",
-    "280",
-    "EUR",
-    "N",
-    "SP_UMB_COM",
-    "1 Thierer Crossing",
-    "Suite 41",
+    "South St",
+    "Wincanton",
     "",
     "",
-    "SN1",
-    "KP837162"
-  ],
-  [
-    "SP_LTD",
-    "",
-    "_DIRECT",
-    "30/01/2023",
-    "F",
-    "TQ394242N",
-    "763 Homewood Park",
-    "Suite 80",
-    "",
-    "",
-    "EC3M",
+    "BA9 9DL",
     "F",
     "",
-    "01/01/2024",
-    "30/04/2024",
-    "168",
+    "2023-10-01",
+    "2023-11-01",
+    "396",
     "GBP",
     "Y",
-    "Ajay Direct UMB",
-    "763 Homewood Park",
-    "Suite 80",
+    "UmbrellaCompany",
+    "South St",
+    "Wincanton",
     "",
     "",
-    "EC3M",
-    "AZ100420"
+    "BA9 9DL",
+    "628514344"
+  ],
+  [
+    "Ajay umb",
+    "",
+    "Incont",
+    "2022-02-21",
+    "F",
+    "",
+    "801",
+    "Tom Martin Dr.",
+    "Birmingham,",
+    "",
+    "AL 35211",
+    "F",
+    "",
+    "2023-07-01",
+    "2024-01-01",
+    "1134",
+    "GBP",
+    "N",
+    "Shelby Umbrella LTD",
+    "801",
+    "Tom Martin Dr.",
+    "Birmingham,",
+    "",
+    "AL 35211",
+    "SC543223"
+  ],
+  [
+    "Ajay umb",
+    "",
+    "Incont",
+    "2022-02-21",
+    "F",
+    "",
+    "47 Cottonwood Road",
+    "Room 1317",
+    "",
+    "",
+    "CV35",
+    "F",
+    "",
+    "2023-01-03",
+    "2024-01-01",
+    "80101.2",
+    "GBP",
+    "Y",
+    "Umbrella Payment 005",
+    "47 Cottonwood Road",
+    "Room 1317",
+    "",
+    "",
+    "CV35",
+    "SC713786"
+  ],
+  [
+    "Raynor",
+    "",
+    "Flintoffe",
+    "2021-12-25",
+    "F",
+    "",
+    "No:23",
+    "Anna salai",
+    "",
+    "",
+    "69365",
+    "D",
+    "",
+    "2023-10-01",
+    "2023-12-02",
+    "24953.5",
+    "GBP",
+    "Y",
+    "Ajay Limited GBP",
+    "No:23",
+    "Anna salai",
+    "",
+    "",
+    "69365",
+    "94654456"
+  ],
+  [
+    "Raynor",
+    "",
+    "Flintoffe",
+    "2021-12-25",
+    "F",
+    "",
+    "11,INDIRECT_AGENCY_SP_STREET",
+    "",
+    "",
+    "",
+    "606903",
+    "F",
+    "",
+    "2023-06-01",
+    "2023-07-01",
+    "3420",
+    "GBP",
+    "Y",
+    "Ajay Umbrella 4",
+    "11,INDIRECT_AGENCY_SP_STREET",
+    "",
+    "",
+    "",
+    "606903",
+    "SC4989557"
   ]
 ]
